add swagger comment in user delete many by admin controller #28
