# app/controller/usercontroller/deletebyadmin.go
@@ -9,6 +9,18 @@ import (
 	"github.com/nsevenpack/logger/v2/logger"
 )
 
+// DeleteByAdmin godoc
+// @Summary Supprime un ou plusieurs user(s) spécifique par un admin
+// @Description Supprime le ou les user(s) indiqué par un utilisateur avec role = admin
+// @Tags admin
+// @Security BearerAuth
+// @Produce json
+// @Param ids body auth.UserDeleteDto true "Ids des users à supprimer"
+// @Success 200 {object} doc.ResponseModel "X utilisateurs supprimés"
+// @Failure 401 {object} doc.ResponseModel "Token invalide"
+// @Failure 403 {object} doc.ResponseModel "Insufficient permissions"
+// @Failure 500 {object} doc.ResponseModel "Erreur interne"
+// @Router /task/delete/user [post]
 func (u *userController) DeleteByAdmin(c *gin.Context) {
 	var idsDto auth.UserDeleteDto
 	if err := c.ShouldBindJSON(&idsDto); err != nil {
