# doc/swagger.json
@@ -67,34 +67,40 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Supprime la ou les task(s) indiqué de l'utilisateur authentifié via le token dans le header",
+                "description": "Supprime le ou les user(s) indiqué par un utilisateur avec role = admin",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "task"
+                    "admin"
                 ],
-                "summary": "Supprime une ou plusieurs task(s) spécifique de l'utilisateur connecté",
+                "summary": "Supprime un ou plusieurs user(s) spécifique par un admin",
                 "parameters": [
                     {
-                        "description": "Ids des tasks à supprimer",
+                        "description": "Ids des users à supprimer",
                         "name": "ids",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/task.TaskDeleteManyDto"
+                            "$ref": "#/definitions/auth.UserDeleteDto"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Les tâches ont été supprimées avec succès",
+                        "description": "X utilisateurs supprimés",
                         "schema": {
                             "$ref": "#/definitions/doc.ResponseModel"
                         }
                     },
                     "401": {
                         "description": "Token invalide",
+                        "schema": {
+                            "$ref": "#/definitions/doc.ResponseModel"
+                        }
+                    },
+                    "403": {
+                        "description": "Insufficient permissions",
                         "schema": {
                             "$ref": "#/definitions/doc.ResponseModel"
                         }
@@ -475,6 +481,20 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "auth.UserDeleteDto": {
+            "type": "object",
+            "required": [
+                "ids"
+            ],
+            "properties": {
+                "ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
